--- a/app/api-test.html
+++ b/app/api-test.html
@@ -27,6 +27,7 @@
     <!-- endbuild -->
 
     <!-- build:js /scripts/roost.min.js -->
+    <script src="/scripts-src/config.js"></script>
     <script src="/scripts-src/polyfills.js"></script>
     <script src="/scripts-src/tickets.js"></script>
     <script src="/scripts-src/api.js"></script>
