--- a/app/api-test.html
+++ b/app/api-test.html
@@ -26,6 +26,7 @@
     <!-- build:js /scripts/roost.min.js -->
     <script src="/scripts-src/config.js"></script>
     <script src="/scripts-src/polyfills.js"></script>
+    <script src="/scripts-src/events.js"></script>
     <script src="/scripts-src/tickets.js"></script>
     <script src="/scripts-src/api.js"></script>
     <script src="/scripts-src/model.js"></script>
