Switch the client over to use sockjs

--- a/app/index.html
+++ b/app/index.html
@@ -9,9 +9,7 @@
     <!-- build:js /scripts/q.min.js -->
     <script src="/bower_components/q/q.js"></script>
     <!-- endbuild -->
-    <!-- build:js /scripts/socket.io.min.js -->
-    <script src="/bower_components/socket.io-client/dist/socket.io.js"></script>
-    <!-- endbuild -->
+    <script src="/scripts/sockjs.min.js"></script>
     <!-- build:js /scripts/winchan.min.js -->
     <script src="/bower_components/winchan/winchan.js"></script>
     <!-- endbuild -->
