--- a/app/index.html
+++ b/app/index.html
@@ -36,8 +36,8 @@
     <script src="/scripts-src/ztext.js"></script>
     <script src="/scripts-src/messageview.js"></script>
     <!-- endbuild -->
-    <!-- build:js /scripts/scroll-test.min.js -->
-    <script src="/scripts-src/scroll-test.js"></script>
+    <!-- build:js /scripts/main.min.js -->
+    <script src="/scripts-src/main.js"></script>
     <!-- endbuild -->
   </head>
   <body>
