--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
     <script src="/scripts-src/polyfills.js"></script>
     <script src="/scripts-src/events.js"></script>
     <script src="/scripts-src/timespan.js"></script>
+    <script src="/scripts-src/url.js"></script>
     <script src="/scripts-src/storage.js"></script>
     <script src="/scripts-src/tickets.js"></script>
     <script src="/scripts-src/api.js"></script>
