--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
     <script src="/scripts-src/url.js"></script>
     <script src="/scripts-src/storage.js"></script>
     <script src="/scripts-src/tickets.js"></script>
+    <script src="/scripts-src/filter.js"></script>
     <script src="/scripts-src/api.js"></script>
     <script src="/scripts-src/model.js"></script>
     <script src="/scripts-src/colors.js"></script>
