First version of filter support!!!!
IT WORKS!!!!

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,8 @@
     <!-- endbuild -->
   </head>
   <body>
+    <button id="reset-view">Reset view</button>
+
     <div id="messagelist">
     </div>
 
