--- a/app/api-test.html
+++ b/app/api-test.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Roost</title>
     <link rel="stylesheet" href="/styles/style.css">
+    <link rel="SHORTCUT ICON" href="/favicon.ico">
 
     <!-- build:js /scripts/q.min.js -->
     <script src="/bower_components/q/q.js"></script>
