--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Roost</title>
     <link rel="stylesheet" href="/styles/style.css">
+    <link rel="SHORTCUT ICON" href="/favicon.ico">
 
     <!-- build:js /scripts/q.min.js -->
     <script src="/bower_components/q/q.js"></script>
