Add a zwrite form to api-test.html

--- a/app/api-test.html
+++ b/app/api-test.html
@@ -64,6 +64,13 @@
     </form>
     <button id="checkdemon">Check inner demon</button>
     <button id="refreshcreds">Refresh zephyr creds</button>
+    <form id="zwrite">
+      Class: <input name="class" placeholder="message"><br>
+      Instance: <input name="instance" placeholder="personal"><br>
+      Recipient: <input name="recipient"><br>
+      <textarea name="message" rows=10 cols=80></textarea><br>
+      <input type="submit" value="Send">
+    </form>
     <pre id="log"></pre>
 
     <div id="renew-template" hidden>
