--- a/test/index.html
+++ b/test/index.html
@@ -38,6 +38,7 @@
     <script src="/scripts-src/storage.js"></script>
     <script src="/scripts-src/tickets.js"></script>
     <script src="/scripts-src/filter.js"></script>
+    <script src="/scripts-src/userinfo.js"></script>
     <script src="/scripts-src/api.js"></script>
     <script src="/scripts-src/model.js"></script>
     <script src="/scripts-src/colors.js"></script>
