--- a/test/index.html
+++ b/test/index.html
@@ -34,6 +34,7 @@
     <script src="/scripts-src/polyfills.js"></script>
     <script src="/scripts-src/events.js"></script>
     <script src="/scripts-src/timespan.js"></script>
+    <script src="/scripts-src/sequtil.js"></script>
     <script src="/scripts-src/url.js"></script>
     <script src="/scripts-src/storage.js"></script>
     <script src="/scripts-src/tickets.js"></script>
