--- a/app/index.html
+++ b/app/index.html
@@ -55,14 +55,25 @@
     <div id="messagelist">
     </div>
 
-    <div id="reply-box" hidden>
-      <button class="close-button">X</button>
-      <form class="zwrite-form">
-        Class: <input name="class" placeholder="message"><br>
-        Instance: <input name="instance" placeholder="personal"><br>
-        Recipient: <input name="recipient"><br>
-        <textarea name="message" rows=10 cols=80></textarea><br>
-        <input type="submit" value="Send">
+    <div id="reply-box">
+      <div id="reply-bar">
+        <hr>
+        <span id="user-display"></span><a class="logout-button">(logout)</a>
+      </div>
+      <form class="zwrite-form" hidden>
+        <div>Waiting for ack... <a class="close-button">[x]</a></div>
+        <div id="zwrite-command">
+          command: zwrite
+          -c <span contenteditable="true" id="zwrite-class"></span>
+          -i <span contenteditable="true" id="zwrite-instance"></span>
+          <span contenteditable="true" id="zwrite-recipient"></span>
+          <span id="collapse-signature" class="collapsed"><label>-s</label>
+             <span contenteditable="true" id="zwrite-signature"></span></span>
+          <span id="collapse-opcode" class="collapsed"><label>-O</label>
+             <span contenteditable="true" id="zwrite-opcode"></span></span>
+        </div>
+        <textarea name="message" rows=8 cols=80></textarea>
+        <a class="send-button" tabindex=0>send</a>
       </form>
     </div>
 
