every damn time

--- a/app/index.html
+++ b/app/index.html
@@ -73,7 +73,7 @@
              <span contenteditable="true" id="zwrite-opcode"></span></span>
         </div>
         <textarea name="message" rows=8 cols=80></textarea>
-        <a class="send-button" tabindex=0>send</a>
+        <a class="zwrite-send" tabindex=0>send</a>
       </form>
     </div>
 
