First go at saving state
This seems to work?

--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,9 @@
   </head>
   <body>
     <button id="reset-view">Reset view</button>
+    <select id="recent-states">
+      <option>Recent positions</option>
+    </select>
 
     <div id="messagelist">
     </div>
