Move everything into a RoostController
Also expose a $scope.principal. Doesn't do anything for now, but hopefully it's
a start.

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app ng-csp>
+<html ng-app="roostApp" ng-csp ng-controller="RoostController">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -50,8 +50,8 @@
     <script src="/scripts-src/ztext.js"></script>
     <script src="/scripts-src/messageview.js"></script>
     <!-- endbuild -->
-    <!-- build:js /scripts/main.min.js -->
-    <script src="/scripts-src/main.js"></script>
+    <!-- build:js /scripts/app.min.js -->
+    <script src="/scripts-src/app.js"></script>
     <!-- endbuild -->
   </head>
   <body>
