Move some DOM manipulation to Angular

--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,8 @@
     <!-- endbuild -->
   </head>
   <body>
-    <button id="reset-view" class="btn btn-default">Reset view</button>
+    <button id="reset-view" class="btn btn-default"
+            ng-click="resetView()">Reset view</button>
     <div id="recent-states" class="btn-group">
       <button class="btn btn-default dropdown-toggle"
               data-toggle="dropdown">Recent positions <span class="caret"></span></button>
