--- a/app/index.html
+++ b/app/index.html
@@ -99,7 +99,7 @@
           </label>
           <div class="col-lg-10">
             <input name="recipient" id="reply-form-recipient"
-                   class="form-control input-small" placeholder="personal">
+                   class="form-control input-small">
           </div>
         </div>
         <textarea name="message" class="form-control" rows=10 cols=80></textarea><br>
