--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,7 @@
     <div id="messagelist">
     </div>
 
-    <div id="reply-box" hidden>
+    <div id="reply-box" ng-cloak ng-show="showReplyBox">
       <button class="close-button">X</button>
       <form class="zwrite-form form-horizontal">
         <div class="form-group">
@@ -81,7 +81,8 @@
           </label>
           <div class="col-lg-10">
             <input name="class" id="reply-form-class"
-                   class="form-control input-small" placeholder="message">
+                   class="form-control input-small" placeholder="message"
+                   focus-on="showReplyBox; focusClass">
           </div>
         </div>
         <div class="form-group">
@@ -102,7 +103,8 @@
                    class="form-control input-small">
           </div>
         </div>
-        <textarea name="message" class="form-control" rows=10 cols=80></textarea><br>
+        <textarea name="message" class="form-control" rows=10 cols=80
+                  focus-on="showReplyBox; focusMessage"></textarea><br>
         <input type="submit" value="Send" class="btn btn-primary">
       </form>
     </div>
