--- a/app/api-test.html
+++ b/app/api-test.html
@@ -34,6 +34,7 @@
     <script src="/scripts-src/timespan.js"></script>
     <script src="/scripts-src/sequtil.js"></script>
     <script src="/scripts-src/url.js"></script>
+    <script src="/scripts-src/util.js"></script>
     <script src="/scripts-src/storage.js"></script>
     <script src="/scripts-src/tickets.js"></script>
     <script src="/scripts-src/filter.js"></script>
