Don't make sendZwrite depend on the reply form
We can assemble it all in the template.

--- a/app/index.html
+++ b/app/index.html
@@ -76,7 +76,12 @@
     <div id="reply-box" ng-cloak ng-show="showReplyBox">
       <button class="close-button" ng-click="hideReplyBox()">X</button>
       <form class="zwrite-form form-horizontal"
-            ng-submit="sendZwrite()"
+            ng-submit="sendZwrite({
+                         class: (replyClass || 'message'),
+                         instance: (replyInstance || 'personal'),
+                         recipient: (replyRecipient|longZuser),
+                         message: replyMessage
+                       })"
             on-keydown="replyBoxKeydown($event)">
         <div class="form-group">
           <label for="reply-form-class" class="col-lg-2 control-label">
