--- a/test/index.html
+++ b/test/index.html
@@ -31,6 +31,8 @@
 
     <!-- build:js /scripts/roost.min.js -->
     <script src="/scripts-src/config.js"></script>
+    <script src="/scripts-src/sidetable.js"></script>
+    <script src="/scripts-src/MutationObserver.js"></script>
     <script src="/scripts-src/polyfills.js"></script>
     <script src="/scripts-src/events.js"></script>
     <script src="/scripts-src/timespan.js"></script>
