Modal dialog should not be cancelable

--- a/app/index.html
+++ b/app/index.html
@@ -161,7 +161,8 @@
       </form>
     </div>
 
-    <div class="modal fade" show-modal="ticketNeeded">
+    <div class="modal fade" show-modal="ticketNeeded"
+         data-backdrop="static" data-keyboard="false">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
